--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,13 @@ Flask-SQLAlchemy==2.3.2
 ipython==6.2.1
 ipython-genutils==0.2.0
 itsdangerous==0.24
+jsonschema==2.6.0
 jedi==0.11.0
 Jinja2==2.10
 MarkupSafe==1.0
+matplotlib==2.2.3
+numpy==1.14.3
+pandas==0.23.0
 parso==0.1.0
 passlib==1.7.1
 pexpect==4.3.0
@@ -24,3 +28,4 @@ traitlets==4.3.2
 wcwidth==0.1.7
 Werkzeug==0.12.2
 gunicorn==19.7.1
+
